--- a/src/app/features/app/components/game-level/game-level.component.html
+++ b/src/app/features/app/components/game-level/game-level.component.html
@@ -6,10 +6,16 @@
         <div class="furnitures-section">
             <h3>Furnitures</h3>
             <div class="list">
-            <ng-container *ngFor="let item of data.furnitures; let i = index">
-                <a class="item" (click)="selectFurniture(i)">{{ item.name }}</a>
+            <ng-container *ngFor="let id of game.furnituresRemain; let i = index">
+                <a class="item" (mousedown)="selectFurniture(id)">{{ game.furnitures[id].name }}</a>
             </ng-container>
             </div>
+        </div>
+        <div>
+            <button (click)="submit()">Submit</button>
+        </div>
+        <div>
+            <button (click)="tryAgain()">Try Again</button>
         </div>
     </div>
 </div>
