--- a/src/app/features/app/components/levels-screen/levels-screen.component.html
+++ b/src/app/features/app/components/levels-screen/levels-screen.component.html
@@ -7,56 +7,7 @@
             <h1 class="header__title">Levels</h1>
         </header>
         <div class="grid-wrapper">
-            <div class="level-grid">
-                <a data-target="game-screen" class="level-card level-card--completed">
-                    <svg class="level-card__icon" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg"><path d="M20 6L9 17L4 12" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/></svg>
-                </a>
-                <a routerLink="/level/{{ 2 }}" class="level-card">2</a>
-                <a class="level-card level-card--locked">3</a>
-                <a class="level-card level-card--locked">4</a>
-                <a class="level-card level-card--locked">5</a>
-                <a class="level-card level-card--locked">6</a>
-                <a class="level-card level-card--locked">7</a>
-                <a class="level-card level-card--locked">8</a>
-                <a class="level-card level-card--locked">9</a>
-                <a class="level-card level-card--locked">10</a>
-                <a class="level-card level-card--locked">11</a>
-                <a class="level-card level-card--locked">12</a>
-                <a class="level-card level-card--locked">4</a>
-                <a class="level-card level-card--locked">5</a>
-                <a class="level-card level-card--locked">6</a>
-                <a class="level-card level-card--locked">7</a>
-                <a class="level-card level-card--locked">8</a>
-                <a class="level-card level-card--locked">9</a>
-                <a class="level-card level-card--locked">10</a>
-                <a class="level-card level-card--locked">11</a>
-                <a class="level-card level-card--locked">12</a>
-                <a class="level-card level-card--locked">7</a>
-                <a class="level-card level-card--locked">8</a>
-                <a class="level-card level-card--locked">9</a>
-                <a class="level-card level-card--locked">10</a>
-                <a class="level-card level-card--locked">11</a>
-                <a class="level-card level-card--locked">12</a>
-                <a class="level-card level-card--locked">7</a>
-                <a class="level-card level-card--locked">8</a>
-                <a class="level-card level-card--locked">9</a>
-                <a class="level-card level-card--locked">10</a>
-                <a class="level-card level-card--locked">11</a>
-                <a class="level-card level-card--locked">12</a>
-                <a class="level-card level-card--locked">7</a>
-                <a class="level-card level-card--locked">8</a>
-                <a class="level-card level-card--locked">9</a>
-                <a class="level-card level-card--locked">10</a>
-                <a class="level-card level-card--locked">11</a>
-                <a class="level-card level-card--locked">12</a>
-                <a class="level-card level-card--locked">7</a>
-                <a class="level-card level-card--locked">8</a>
-                <a class="level-card level-card--locked">9</a>
-                <a class="level-card level-card--locked">10</a>
-                <a class="level-card level-card--locked">11</a>
-                <a class="level-card level-card--locked">12</a>
-
-            </div>
+            <levels-map [levels]="(levels$ | async)!"></levels-map>
         </div>
     </div>
 </div>
