--- a/src/styles.scss
+++ b/src/styles.scss
@@ -142,7 +142,7 @@ a {
     margin: 0.25rem 0 0;
 }
 
-.button, .button-link {
+.button, .button-link, .button-base {
     display: inline-block;
     padding: 0.75rem 1.25rem;
     border: none;
@@ -207,6 +207,17 @@ a {
     width: 100%;
     height: 100vh;
     animation: fade-in $dur-medium $easing-soft;
+}
+
+.centered-layout {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
+    padding: 2rem;
+    height: 100%;
+    gap: 1.5rem;
 }
 
 .menu__buttons {
