--- a/src/styles.scss
+++ b/src/styles.scss
@@ -105,6 +105,7 @@ body {
     overscroll-behavior: none;
     -webkit-font-smoothing: antialiased;
     -moz-osx-font-smoothing: grayscale;
+    touch-action: manipulation;
 }
 
 a {
