--- a/src/app/features/app/components/game-screen/game-level/game-level.component.html
+++ b/src/app/features/app/components/game-screen/game-level/game-level.component.html
@@ -35,7 +35,28 @@
         </button>
     </div>
 
-    <nav class="toolbar" aria-label="Панель предметов">
+    <div class="view-actions">
+        <button class="button-base action-btn" (pointerup)="game.rotateCameraLeft()">
+            
+            <svg xmlns="http://www.w3.org/2000/svg" width="32" height="32"
+                viewBox="0 0 24 24" fill="none" stroke="currentColor"
+                stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round">
+                <line x1="20" y1="12" x2="4" y2="12" />
+                <polyline points="10 6 4 12 10 18" />
+            </svg>
+
+        </button>
+        <button class="button-base action-btn" (pointerup)="game.rotateCameraRight()">
+            <svg xmlns="http://www.w3.org/2000/svg" width="32" height="32"
+                viewBox="0 0 24 24" fill="none" stroke="currentColor"
+                stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round">
+                <line x1="4" y1="12" x2="20" y2="12" />
+                <polyline points="14 6 20 12 14 18" />
+            </svg>
+        </button>
+    </div>
+
+    <nav class="toolbar">
         <div class="toolbar__scroller">
             <ng-container *ngFor="let id of game.furnituresRemain; let i = index">
 
