--- a/src/app/features/app/components/game-screen/game-level/game-level.component.scss
+++ b/src/app/features/app/components/game-screen/game-level/game-level.component.scss
@@ -10,10 +10,13 @@
 .game-board {
     transition: opacity $dur-slow $easing-soft;
     transition-delay: 250ms;
-
-    flex: 1;
+    width: 100%;
+    height: 100%;
+    position: relative;
+    overflow: hidden;
 
     canvas {
+        display: block;
         width: 100%;
         height: 100%;
         max-width: 100%;
@@ -72,6 +75,7 @@
     border-top: 1px solid $tile-border;
     z-index: 100;
     padding-bottom: env(safe-area-inset-bottom, 1rem);
+    // min-height: 132px;
 
     transition: transform $dur-slow $easing-soft;
 }
@@ -177,4 +181,16 @@
 }
 .action-btn--primary:hover {
     background-color: $accent-hover;
+}
+
+.view-actions {
+    position: absolute;
+    top: calc(105px + env(safe-area-inset-top, 0));
+    
+    width: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    box-sizing: border-box;
+    gap: 20px;
 }
