--- a/src/app/features/common/components/pixi-asset-img/pixi-asset-img.component.scss
+++ b/src/app/features/common/components/pixi-asset-img/pixi-asset-img.component.scss
@@ -13,4 +13,7 @@ img {
     max-width: 100%;
     max-height: 100%;
     object-fit: contain;
+    -webkit-user-drag: none;
+    user-drag: none;
+    pointer-events: none;
 }
