--- a/src/styles/common.scss
+++ b/src/styles/common.scss
@@ -13,6 +13,7 @@ $accent-hover: #409cff;
 $text-primary: #f2f2f7;
 $text-secondary: #8e8e93;
 $success: #28a745;
+$success-weak: rgba(40, 167, 69, 0.15);
 $danger: #dc3545;
 $warning: #ffc107;
 
