--- a/src/app/features/app/components/game-screen/game-level/game-level.component.html
+++ b/src/app/features/app/components/game-screen/game-level/game-level.component.html
@@ -22,7 +22,17 @@
     </div>
 
     <div class="placement-actions" *ngIf="game.furnitureSelected >= 0">
-        <div class="placement-rules">
+        <button id="toggle-rules-btn" class="button-base rules-toggle-btn" *ngIf="true" (pointerup)="toggleRules()">
+            <svg *ngIf="!rulesExpaned" class="button__icon icon-expand" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg"><path d="M6 15L12 9L18 15" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/></svg>
+            <svg *ngIf="rulesExpaned" class="button__icon icon-collapse" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg"><path d="M6 9L12 15L18 9" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/></svg>
+        </button>
+
+        <div class="rules-summary" *ngIf="!rulesExpaned">
+            <svg class="rule-item__icon" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg"><path d="M12 22C17.5228 22 22 17.5228 22 12C22 6.47715 17.5228 2 12 2C6.47715 2 2 6.47715 2 12C2 17.5228 6.47715 22 12 22Z" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/><path d="M16 10L11 15L8 12" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/></svg>
+            <span> 0 / 2 rules completed</span>
+        </div>
+
+        <div class="placement-rules" *ngIf="rulesExpaned">
             <div class="rule-item is-complete">
                 <svg class="rule-item__icon icon-complete" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg"><path d="M12 22C17.5228 22 22 17.5228 22 12C22 6.47715 17.5228 2 12 2C6.47715 2 2 6.47715 2 12C2 17.5228 6.47715 22 12 22Z" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/><path d="M16 10L11 15L8 12" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/></svg>
                 <span>Fits against the wall</span>
