--- a/src/app/features/app/components/game-screen/game-level/game-level.component.html
+++ b/src/app/features/app/components/game-screen/game-level/game-level.component.html
@@ -22,27 +22,44 @@
     </div>
 
     <div class="placement-actions" *ngIf="game.furnitureSelected >= 0">
-        <button id="toggle-rules-btn" class="button-base rules-toggle-btn" *ngIf="true" (pointerup)="toggleRules()">
-            <svg *ngIf="!rulesExpaned" class="button__icon icon-expand" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg"><path d="M6 15L12 9L18 15" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/></svg>
-            <svg *ngIf="rulesExpaned" class="button__icon icon-collapse" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg"><path d="M6 9L12 15L18 9" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/></svg>
-        </button>
 
-        <div class="rules-summary" *ngIf="!rulesExpaned">
-            <svg class="rule-item__icon" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg"><path d="M12 22C17.5228 22 22 17.5228 22 12C22 6.47715 17.5228 2 12 2C6.47715 2 2 6.47715 2 12C2 17.5228 6.47715 22 12 22Z" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/><path d="M16 10L11 15L8 12" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/></svg>
-            <span> 0 / 2 rules completed</span>
-        </div>
+        <ng-container *ngIf="rules.length > 0">
 
-        <div class="placement-rules" *ngIf="rulesExpaned">
-            <div class="rule-item is-complete">
-                <svg class="rule-item__icon icon-complete" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg"><path d="M12 22C17.5228 22 22 17.5228 22 12C22 6.47715 17.5228 2 12 2C6.47715 2 2 6.47715 2 12C2 17.5228 6.47715 22 12 22Z" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/><path d="M16 10L11 15L8 12" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/></svg>
-                <span>Fits against the wall</span>
+            <ng-container *ngIf="rules.length > 1">
+                <button class="button-base rules-toggle-btn" (pointerup)="toggleRules()">
+                    <svg *ngIf="!rulesExpaned" class="button__icon icon-expand" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg"><path d="M6 15L12 9L18 15" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/></svg>
+                    <svg *ngIf="rulesExpaned" class="button__icon icon-collapse" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg"><path d="M6 9L12 15L18 9" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/></svg>
+                </button>
+            
+                <div class="rules-summary" *ngIf="!rulesExpaned">
+                    <svg *ngIf="rulesCompleted.length == rules.length" class="rule-item__icon icon-complete" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg"><path d="M12 22C17.5228 22 22 17.5228 22 12C22 6.47715 17.5228 2 12 2C6.47715 2 2 6.47715 2 12C2 17.5228 6.47715 22 12 22Z" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/><path d="M16 10L11 15L8 12" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/></svg>
+<svg *ngIf="rulesCompleted.length != rules.length" class="rule-item__icon icon-pending" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg"><circle cx="12" cy="12" r="10" stroke="currentColor" stroke-width="2" fill="none"/></svg>
+                    <span> {{rulesCompleted.length}} / {{rules.length}} rules completed</span>
+                </div>
+            </ng-container>
+
+            <div class="placement-rules" *ngIf="rulesExpaned || rules.length < 2">
+                <ng-container *ngFor="let rule of rules">
+                    <div class="rule-item" [ngClass]="{'is-complete': rule.isValid}">
+                        
+                        <svg *ngIf="rule.isValid" class="rule-item__icon icon-complete" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg"><path d="M12 22C17.5228 22 22 17.5228 22 12C22 6.47715 17.5228 2 12 2C6.47715 2 2 6.47715 2 12C2 17.5228 6.47715 22 12 22Z" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/><path d="M16 10L11 15L8 12" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/></svg>
+                        <svg *ngIf="!rule.isValid" class="rule-item__icon icon-pending" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg"><circle cx="12" cy="12" r="10" stroke="currentColor" stroke-width="2" fill="none"/></svg>
+                        
+                        <span>{{ rule.message }}</span>
+                    </div>
+                </ng-container>
+                
+                <!-- <div class="rule-item is-complete">
+                    <svg class="rule-item__icon icon-complete" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg"><path d="M12 22C17.5228 22 22 17.5228 22 12C22 6.47715 17.5228 2 12 2C6.47715 2 2 6.47715 2 12C2 17.5228 6.47715 22 12 22Z" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/><path d="M16 10L11 15L8 12" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/></svg>
+                    <span>Fits against the wall</span>
+                </div>
+                <div class="rule-item">
+                    <svg class="rule-item__icon icon-pending" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg"><circle cx="12" cy="12" r="10" stroke="currentColor" stroke-width="2" fill="none"/></svg>
+
+                    <span>There is space in front</span>
+                </div> -->
             </div>
-            <div class="rule-item">
-                <svg class="rule-item__icon icon-pending" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg"><circle cx="12" cy="12" r="10" stroke="currentColor" stroke-width="2" fill="none"/></svg>
-
-                <span>There is space in front</span>
-            </div>
-        </div>
+        </ng-container>
 
         <div class="placement-actions__buttons">
             <button class="button-base action-btn" (pointerup)="cancelSelection($event)">
