--- a/src/app/features/app/components/game-screen/game-level/game-level.component.html
+++ b/src/app/features/app/components/game-screen/game-level/game-level.component.html
@@ -1,19 +1,60 @@
 <div class="app-layout" [ngClass]="{'is-visible': !hide}">
     <div class="header-wrapper">
-        <header class="header header--with-back-btn">
+        
+        <header class="header">
+            <div class="header__left-controls">
+                <a class="button-link button--secondary button--icon-only menu-button" (click)="toLevels()">
+                    <svg class="button__icon" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg"><path d="M15 3H7C5.89543 3 5 3.89543 5 5V19C5 20.1046 5.89543 21 7 21H15" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/><path d="M19 12H9" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/><path d="M12 15L9 12L12 9" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/></svg>
+                </a>
+                <!-- <h1 class="header__title">Level 2</h1> -->
+            </div>
+            <div class="header__gamestate">
+                <div class="state-display">
+                    <div class="state-display__label">score</div>
+                    <div class="state-display__value">{{this.game.score}} / {{this.game.nextLevelScore}}</div>
+                </div>
+                <div class="state-display">
+                    <div class="state-display__label">moves</div>
+                    <div class="state-display__value">{{this.game.maxMoves - this.game.moves}}</div>
+                </div>
+                <div class="state-display">
+                    <div class="state-display__label">level</div>
+                    <div class="state-display__value">{{this.game.level}}</div>
+                </div>
+            </div>
+        </header>
+
+        <!-- <header class="header header--with-back-btn">
             <a class="button-link button--secondary" (click)="toLevels()">
                 <svg class="button__icon" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg"><path d="M15 18L9 12L15 6" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/></svg>
             </a>
-            <!-- <div class="header__info">
-                <h1 class="header__title">Level {{ order + 1 }}</h1>
-                <p class="header__progress">Items: {{ game.furniturePlaced.getAll().length }}/{{ game.furnitures.length }}</p>
-            </div> -->
-            <!-- For demo: these buttons link to success/failure modals -->
             <div class="header__tools">
                 <a data-target="failure-screen" class="button-link button--secondary" (click)="tryAgain()">Restart</a>
                 <a data-target="success-screen" class="button-link" (click)="game.canSubmit() && submit()" [attr.disabled]="(game.canSubmit$ | async) ? null : ''">Submit</a>
             </div>
-        </header>
+        </header> -->
+        
+        <!-- <div *ngIf="game && !!game.furnitureSprite()">
+            <div>
+                <span>X:</span>
+                <input [value]="game.furnitureSprite()!.offsetX" (change)="onXChanged($event)"  type="number">
+            </div>
+
+            <div>
+                <span>Y:</span>
+                <input [value]="game.furnitureSprite()!.offsetY" (change)="onYChanged($event)"  type="number">
+            </div>
+
+            <div>
+                <span>Width:</span>
+                <input [value]="game.furnitureSprite()!.width" (change)="onWidthChanged($event)"  type="number">
+            </div>
+
+            <div>
+                <span>Height:</span>
+                <input [value]="game.furnitureSprite()!.height" (change)="onHeightChanged($event)"  type="number">
+            </div>
+        </div> -->
     </div>
 
 
@@ -33,7 +74,7 @@
             
                 <div class="rules-summary" *ngIf="!rulesExpaned">
                     <svg *ngIf="rulesCompleted.length == rules.length" class="rule-item__icon icon-complete" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg"><path d="M12 22C17.5228 22 22 17.5228 22 12C22 6.47715 17.5228 2 12 2C6.47715 2 2 6.47715 2 12C2 17.5228 6.47715 22 12 22Z" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/><path d="M16 10L11 15L8 12" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/></svg>
-<svg *ngIf="rulesCompleted.length != rules.length" class="rule-item__icon icon-pending" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg"><circle cx="12" cy="12" r="10" stroke="currentColor" stroke-width="2" fill="none"/></svg>
+                    <svg *ngIf="rulesCompleted.length != rules.length" class="rule-item__icon icon-pending" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg"><circle cx="12" cy="12" r="10" stroke="currentColor" stroke-width="2" fill="none"/></svg>
                     <span> {{rulesCompleted.length}} / {{rules.length}} rules completed</span>
                 </div>
             </ng-container>
@@ -99,7 +140,7 @@
         <div class="toolbar__scroller">
             <ng-container *ngFor="let id of game.furnituresRemain; let i = index">
 
-                <div class="item-card" [ngClass]="{'is-selected': id == game.furnitureSelected}" role="button" aria-pressed="true" (pointerdown)="selectFurniture(id, $event)">
+                <div class="item-card" [ngClass]="{'is-selected': id == game.furnitureSelected}" (pointerdown)="selectFurniture(id, $event)">
                     <div class="item-card__thumbnail">
                         <pixi-asset-img class="item-card__image" 
                             [asset]="game.furnitures[id].sprite[0].name"
@@ -111,6 +152,13 @@
                 </div>
             
             </ng-container>
+
+            <div class="item-card item-card__replenish" (pointerdown)="replenishDeck()" *ngIf="isReplenishShown()">
+                <div class="item-card__thumbnail">
+                    <svg class="button__icon" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg"><path d="M12 4V20M20 12H4" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/></svg>
+                </div>
+                <h2 class="item-card__title">Replenish</h2>
+            </div>
 
             <!-- <div class="item-card is-selected" role="button" aria-pressed="true" tabindex="0">
                 <div class="item-card__thumbnail"><img src="https://picsum.photos/seed/chair/80/80" alt="Стул" class="item-card__image"></div>
