--- a/src/styles/common.scss
+++ b/src/styles/common.scss
@@ -14,6 +14,7 @@ $text-primary: #f2f2f7;
 $text-secondary: #8e8e93;
 $success: #28a745;
 $success-weak: rgba(40, 167, 69, 0.15);
+$danger-weak: rgba(220, 53, 69, 0.1);
 $danger: #dc3545;
 $warning: #ffc107;
 
